visibility bug fix

--- a/src/sass/kids.scss
+++ b/src/sass/kids.scss
@@ -275,15 +275,18 @@
 		top: 40%;
 		left: 50%;
 		opacity: 0;
+		visibility: hidden;
 	}
 
 	&__bag{
 		//margin: 0 130px 0 0;
 		position: fixed;
-		bottom: 100px;
+		bottom: 50%;
 		left: 0;
-		right: 130px;
+		right: 125px;
 		opacity: 0;
+		visibility: hidden;
+		margin: 0 0 -380px;
 	}
 
 	&__bag-mask{
@@ -291,11 +294,12 @@
 		width: image-width('../assets/images/bag/mask.png');
 		height: image-height('../assets/images/bag/mask.png');		
 		position: absolute;
-		bottom: 183px;
+		bottom: 50%;
 		left: 50%;	
-		margin: 0 0 0 -62px;	
+		margin: 0 0 -300px -64px;	
 		z-index: 400;
 		opacity: 0;
+		visibility: hidden;
 
 		position: fixed;
 	}
@@ -308,7 +312,10 @@
 	//position: relative;
 
 	&__content{
-		margin: 0px 0 0 860px;
+		position: absolute;
+		top: 220px;
+		left: 50%;
+		margin: 0 0 0 170px;
 	}
 
 	&__title{
